samples/_failures_safe/1761518696_26875d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c456d60.c: In function ‘main’:
./samples/SAFE/__tmp_5c456d60.c:178:23: error: expected ‘)’ at end of input
  178 |         if (token.type
      |            ~          ^
      |                       )
./samples/SAFE/__tmp_5c456d60.c:178:9: error: expected declaration or statement at end of input
  178 |         if (token.type
      |         ^~
./samples/SAFE/__tmp_5c456d60.c:178:9: error: expected declaration or statement at end of input
